--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="select_league">Select League</string>
+    <string name="team">Team</string>
+    <string name="match">Match</string>
+    <string name="all_team">All Team</string>
 
 
 </resources>
