--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,6 @@
 <resources>
 
-
-    <string-array name="league">
-        <item>English Premier League</item>
-        <item>English League Championship</item>
-        <item>German Bundesliga</item>
-        <item>Italian Serie A</item>
-        <item>French Ligue 1</item>
-        <item>Spanish La Liga</item>
-    </string-array>
-
-    <string name="title_prev_match">Prev Match</string>
-    <string name="title_next_match">Next Match</string>
     <string name="title_favourite">Favorite</string>
-
     <string name="appName">FootBall Application</string>
     <string name="vs">VS</string>
     <string name="goals">Goals</string>
@@ -26,11 +13,9 @@
     <string name="search">Search</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_home">HomeActivity</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
@@ -38,6 +23,10 @@
     <string name="team">Team</string>
     <string name="match">Match</string>
     <string name="all_team">All Team</string>
-
+    <string name="weight_kg">weight(kg)</string>
+    <string name="height_m">Height(m)</string>
+    <string name="home">Home</string>
+    <string name="favorite">Favorite</string>
+    <string name="teams">Teams</string>
 
 </resources>
